Web Inspector: do not pause on caught exceptions while typing in the console. https://bugs.webkit.org/show_bug.cgi?id=64379

Reviewed by Yury Semikhatsky.

* inspector/Inspector.json:
* inspector/InspectorController.cpp:
(WebCore::InspectorController::InspectorController):
* inspector/InspectorRuntimeAgent.cpp:
(WebCore::InspectorRuntimeAgent::InspectorRuntimeAgent):
(WebCore::InspectorRuntimeAgent::evaluate):
(WebCore::InspectorRuntimeAgent::setScriptDebugServer):
* inspector/InspectorRuntimeAgent.h:
* inspector/WorkerInspectorController.cpp:
(WebCore::WorkerInspectorController::WorkerInspectorController):
* inspector/front-end/ConsoleView.js:
(WebInspector.ConsoleView.prototype.evalInInspectedWindow):
* inspector/front-end/WatchExpressionsSidebarPane.js:
(WebInspector.WatchExpressionsSection.prototype.update):

Canonical link: https://commits.webkit.org/80426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91176 268f45cc-cd09-0410-ab3c-d52691b4dbfc